src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Albuquerque</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Bay Area</fullName>
                </value>
                <value>
                    <fullName>BPM - East</fullName>
                </value>
                <value>
                    <fullName>BPM - National</fullName>
                </value>
                <value>
                    <fullName>BPM - Northeast</fullName>
                </value>
                <value>
                    <fullName>BPM - Southeast</fullName>
                </value>
                <value>
                    <fullName>BPM - West</fullName>
                </value>
                <value>
                    <fullName>Central/Northern FL</fullName>
                </value>
                <value>
                    <fullName>Central CA</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>eCommerce</fullName>
                </value>
                <value>
                    <fullName>House</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Inside Sales 1</fullName>
                </value>
                <value>
                    <fullName>Inside Sales 2</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Maryland/Northern VA/DC</fullName>
                </value>
                <value>
                    <fullName>Mid-Atlantic</fullName>
                </value>
                <value>
                    <fullName>Midwest - Eastern</fullName>
                </value>
                <value>
                    <fullName>Midwest - Lower</fullName>
                </value>
                <value>
                    <fullName>Midwest - Upper</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>New England</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remarket_Nurture_Reasons__c</fullName>
        <label>Remarket/Nurture Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Not Ready to Purchase</fullName>
                </value>
                <value>
                    <fullName>Price Shopping</fullName>
                </value>
                <value>
                    <fullName>Information Gathering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Category__c</fullName>
        <label>Revenue Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fedex</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Contact</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Key Influencer</fullName>
                </value>
                <value>
                    <fullName>Purchaser</fullName>
                </value>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Purchasing Agent</fullName>
                </value>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>End User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_HWGlobal_Email_OptOut__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Opt In Values from Silverpop.  If checked they are ok to receive communication.</description>
        <inlineHelpText>Opt In Values from Silverpop.  If checked they are ok to receive communication.</inlineHelpText>
        <label>HW Global Email Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_InsightsNL_Email_OptOut__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Opt In Values from Silverpop.  If checked they are ok to receive communication.</description>
        <inlineHelpText>Opt In Values from Silverpop.  If checked they are ok to receive communication.</inlineHelpText>
        <label>Insights NL Email Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_Media_Email_OptOut__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Opt In Values from Silverpop.  If checked they are ok to receive communication.</description>
        <inlineHelpText>Opt In Values from Silverpop.  If checked they are ok to receive communication.</inlineHelpText>
        <label>Media Email Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_MetrostudyBriefings_Email_OptOut__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Opt In Values from Silverpop.  If checked they are ok to receive communication.</description>
        <inlineHelpText>Opt In Values from Silverpop.  If checked they are ok to receive communication.</inlineHelpText>
        <label>Metrostudy Briefings Email Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_MetrostudyMarketing_OptOut__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Opt In Values from Silverpop.  If checked they are ok to receive communication.</description>
        <inlineHelpText>Opt In Values from Silverpop.  If checked they are ok to receive communication.</inlineHelpText>
        <label>Metrostudy Marketing Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_MetrostudyNL_Email_OptOut__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Opt In Values from Silverpop.  If checked they are ok to receive communication.</description>
        <inlineHelpText>Opt In Values from Silverpop.  If checked they are ok to receive communication.</inlineHelpText>
        <label>Metrostudy NL Email Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_MetrostudyUpdates_Email_OptOut__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Opt In Values from Silverpop.  If checked they are ok to receive communication.</description>
        <inlineHelpText>Opt In Values from Silverpop.  If checked they are ok to receive communication.</inlineHelpText>
        <label>Metrostudy Updates Email Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_MetrostudyWebBriefings_Email_OptOut__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Opt In Values from Silverpop.  If checked they are ok to receive communication.</description>
        <inlineHelpText>Opt In Values from Silverpop.  If checked they are ok to receive communication.</inlineHelpText>
        <label>Metrostudy Web Briefings Email Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shows_Email_Blast_Leads_Tag__c</fullName>
        <label>Shows/Email Blast Leads Tag</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AIA Convention - June 2014</fullName>
                </value>
                <value>
                    <fullName>AR Redesign Email 2014</fullName>
                </value>
                <value>
                    <fullName>AR Redesign Mailing 2014</fullName>
                </value>
                <value>
                    <fullName>Jan ’15 WOC Show Issue</fullName>
                </value>
                <value>
                    <fullName>Jan ’15 WOC Show Issue_BM</fullName>
                </value>
                <value>
                    <fullName>Jan ’15 WOC Show Issue_DM</fullName>
                </value>
                <value>
                    <fullName>Jan ’15 WOC Show Issue_DR</fullName>
                </value>
                <value>
                    <fullName>Jan ’15 WOC Show Issue_GC</fullName>
                </value>
                <value>
                    <fullName>Jan ’15 WOC Show Issue_MC</fullName>
                </value>
                <value>
                    <fullName>Jan ’15 WOC Show Issue_MW</fullName>
                </value>
                <value>
                    <fullName>Jan ’15 WOC Show Issue_PH</fullName>
                </value>
                <value>
                    <fullName>Jan ’15 WOC Show Issue_SD</fullName>
                </value>
                <value>
                    <fullName>Jan ’15 WOC Show Issue_TH</fullName>
                </value>
                <value>
                    <fullName>JLC Live Show Providence 2015</fullName>
                </value>
                <value>
                    <fullName>November 2014 Builder Email Blast</fullName>
                </value>
                <value>
                    <fullName>PA Awards Dinner - February 2014</fullName>
                </value>
                <value>
                    <fullName>World of Concrete - January 2014</fullName>
                </value>
                <value>
                    <fullName>BD Buyers Guide_2015</fullName>
                </value>
                <value>
                    <fullName>RM Buyers Guide_2015</fullName>
                </value>
                <value>
                    <fullName>IBS 2015 Booth Lead_Media</fullName>
                </value>
                <value>
                    <fullName>IBS 2015 Booth Lead_MS</fullName>
                </value>
                <value>
                    <fullName>BoxPilot Follow up – RM</fullName>
                </value>
                <value>
                    <fullName>BoxPilot Follow up – BD</fullName>
                </value>
                <value>
                    <fullName>AHF Live Fall 2014</fullName>
                </value>
                <value>
                    <fullName>Cliff Smith</fullName>
                </value>
                <value>
                    <fullName>PWSpring15</fullName>
                </value>
                <value>
                    <fullName>AIA2015</fullName>
                </value>
                <value>
                    <fullName>1Q15 Tampa In Person Briefing</fullName>
                </value>
                <value>
                    <fullName>1Q15 SLC In Person Briefing</fullName>
                </value>
                <value>
                    <fullName>1Q15 Las Vegas In Person Briefing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Small_Builder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Small Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Account_Owner__c</fullName>
        <label>Strategic Account Owner</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Strategic_Account__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>LaFemina, Catherine</fullName>
                </value>
                <value>
                    <fullName>Macintosh, David</fullName>
                </value>
                <value>
                    <fullName>Norris, Wayne</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strategic Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <label>Sub-Industry</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aboveground Pools</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Accounting Firms</fullName>
                </value>
                <value>
                    <fullName>Aggregate</fullName>
                </value>
                <value>
                    <fullName>Amenities Contractor</fullName>
                </value>
                <value>
                    <fullName>Apartment Managers</fullName>
                </value>
                <value>
                    <fullName>Apartment Owners</fullName>
                </value>
                <value>
                    <fullName>Appliances</fullName>
                </value>
                <value>
                    <fullName>Appraisers</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Architect/Consultants/Design, Lighting &amp; Theming</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Automatic Pool Cleaners</fullName>
                </value>
                <value>
                    <fullName>Automation Products, Systems &amp; Controllers</fullName>
                </value>
                <value>
                    <fullName>Bathroom- Decorative</fullName>
                </value>
                <value>
                    <fullName>Brick and Masonry</fullName>
                </value>
                <value>
                    <fullName>Bridges &amp; Culverts</fullName>
                </value>
                <value>
                    <fullName>Builder</fullName>
                </value>
                <value>
                    <fullName>Builders</fullName>
                </value>
                <value>
                    <fullName>Buildings &amp; Facilities</fullName>
                </value>
                <value>
                    <fullName>Business Services</fullName>
                </value>
                <value>
                    <fullName>Business Services &amp; Engineering</fullName>
                </value>
                <value>
                    <fullName>Business Tools &amp; Software</fullName>
                </value>
                <value>
                    <fullName>B-yard Furniture &amp; Patio Accessories</fullName>
                </value>
                <value>
                    <fullName>Cabinets</fullName>
                </value>
                <value>
                    <fullName>Cable</fullName>
                </value>
                <value>
                    <fullName>Chemicals &amp; Water Testing</fullName>
                </value>
                <value>
                    <fullName>Chems, Controllers &amp; Sanitizing Equip</fullName>
                </value>
                <value>
                    <fullName>Civil Engineering</fullName>
                </value>
                <value>
                    <fullName>Commercial Banking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubmitterIP__c</fullName>
        <label>Submitter IP</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adams, CO (08001) (co.)</fullName>
                </value>
                <value>
                    <fullName>Alameda, CA (06001)(co.)</fullName>
                </value>
                <value>
                    <fullName>Albuquerque, NM (000200)</fullName>
                </value>
                <value>
                    <fullName>Alexandria, VA (51510)(co.)</fullName>
                </value>
                <value>
                    <fullName>All Markets (See Attached Exhibit D)</fullName>
                </value>
                <value>
                    <fullName>All SoCal (WST only)</fullName>
                </value>
                <value>
                    <fullName>Anne Arundel, MD (24003)(co.)</fullName>
                </value>
                <value>
                    <fullName>Antelope Valley North (AVN)</fullName>
                </value>
                <value>
                    <fullName>Antelope Valley South (AVS)</fullName>
                </value>
                <value>
                    <fullName>Arapahoe, CO (08005) (co.)</fullName>
                </value>
                <value>
                    <fullName>Arlington, VA (51013)(co.)</fullName>
                </value>
                <value>
                    <fullName>Atlanta, GA (000520)</fullName>
                </value>
                <value>
                    <fullName>Atlantic, NJ (34001)(co.)</fullName>
                </value>
                <value>
                    <fullName>Austin, TX (000640)</fullName>
                </value>
                <value>
                    <fullName>Austin/San Antonio, TX (009501) (HBD Only)</fullName>
                </value>
                <value>
                    <fullName>Bakersfield, CA (000680)</fullName>
                </value>
                <value>
                    <fullName>Baltimore City, MD (24510)(co.)</fullName>
                </value>
                <value>
                    <fullName>Baltimore, MD (000720)</fullName>
                </value>
                <value>
                    <fullName>Baltimore, MD (24005)(co.)</fullName>
                </value>
                <value>
                    <fullName>Bastrop, TX (048021)(co)</fullName>
                </value>
                <value>
                    <fullName>Bergen, NJ (34003)(co.)</fullName>
                </value>
                <value>
                    <fullName>Berkeley, WV (054003)(co.)</fullName>
                </value>
                <value>
                    <fullName>Berks, PA (42011)(co.)</fullName>
                </value>
                <value>
                    <fullName>Bexar, TX (048029)(co)</fullName>
                </value>
                <value>
                    <fullName>Birmingham, AL (1000)</fullName>
                </value>
                <value>
                    <fullName>Boone, IL (017007)(co)</fullName>
                </value>
                <value>
                    <fullName>Boston, MA (001120)</fullName>
                </value>
                <value>
                    <fullName>Boulder, CO (08013)(co.)</fullName>
                </value>
                <value>
                    <fullName>Brazoria, TX (048039)(co)</fullName>
                </value>
                <value>
                    <fullName>Broomfield, CO (08014)(co.)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnbouncePageID__c</fullName>
        <label>Unbounce Page ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnbouncePageVariant__c</fullName>
        <label>Unbounce Page Variant</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnbounceSubmissionDate__c</fullName>
        <label>Unbounce Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UnbounceSubmissionTime__c</fullName>
        <label>Unbounce Submission Time</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unqualified_Reasons__c</fullName>
        <label>Unqualified Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Not ready to purchase</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Price shopping</fullName>
                </value>
                <value>
                    <fullName>Information Gathering</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Missing Phone and Email</fullName>
                </value>
                <value>
                    <fullName>Limited Reach – Niche target market</fullName>
                </value>
                <value>
                    <fullName>Bad Contact Information</fullName>
                </value>
                <value>
                    <fullName>Junk</fullName>
                </value>
                <value>
                    <fullName>Limited Reach – Geo</fullName>
                </value>
                <value>
                    <fullName>10/29/13 Data Import</fullName>
                </value>
                <value>
                    <fullName>Industry Market Not a Match</fullName>
                </value>
                <value>
                    <fullName>Cannot Reach Contact</fullName>
                </value>
                <value>
                    <fullName>PR Company</fullName>
                </value>
                <value>
                    <fullName>OLD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Ownership__c</fullName>
        <formula>IF (

$User.Id = OwnerId, &apos;Me&apos;, 

IF (

OwnerId != $User.Id, &apos;Assigned&apos;,

&apos;Unassigned&apos;

))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Ownership</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Win_Back_Status__c</fullName>
        <label>Win Back Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Communication</fullName>
                </value>
                <value>
                    <fullName>Information Sent</fullName>
                </value>
                <value>
                    <fullName>Scheduled Demo</fullName>
                </value>
                <value>
                    <fullName>Scheduled Meeting</fullName>
                </value>
                <value>
                    <fullName>Offer Declined</fullName>
                </value>
                <value>
                    <fullName>Opportunity Identified</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cirrusadv__Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record was created by Cirrus Insight. This checkbox does not have to be included on the page layout, except with Contact Manager, Group, and Professional Edition organizations.</description>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddc_prospector__Sourced_from_Data_com__c</fullName>
        <description>Used by Data.com Prospector Reports</description>
        <formula>IF( OR(CONTAINS(TEXT(LeadSource) , &quot;Data.com&quot;), CONTAINS(TEXT(LeadSource) , &quot;Jigsaw&quot;)), &quot;Added from Data.com&quot;, &quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sourced from Data.com</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Active_Projects__c</fullName>
        <label># of Active Projects</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Close Score was last updated</description>
        <label>NeuralView: Close Score Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Close Score</description>
        <label>NeuralView: Close Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Contactability Score was last updated</description>
        <label>NeuralView: Contactability Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactScoreId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The InsideSales.com NeuralView Hourly Contactability Score Object Lookup</description>
        <label>NeuralView: Hourly Contactability ID</label>
        <referenceTo>qbdialer__ContactScore__c</referenceTo>
        <relationshipLabel>Contact Score Items</relationshipLabel>
        <relationshipName>Contact_Score_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Contactability Score</description>
        <label>NeuralView: Contactability Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Dials__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.  It should be incremented each time the Lead is dialed.</description>
        <label>Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__LastCallTime__c</fullName>
        <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.</description>
        <label>Last Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ResponseTime__c</fullName>
        <description>This field will store the number of seconds between record creation time and first call time (via the PowerDialer).</description>
        <label>Response Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__TimeZoneSidKey__c</fullName>
        <description>This field will store the TimeZoneSidKey for the Lead.</description>
        <label>TimeZone Sid Key</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbx_BillingCity__c</fullName>
        <description>The inbound Lead field for a transaction from Soapbox Engage that includes a billing city address value.</description>
        <inlineHelpText>The inbound Lead field for a transaction from Soapbox Engage that includes a billing city address value.</inlineHelpText>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbx_BillingCountry__c</fullName>
        <description>The inbound Lead field for a transaction from Soapbox Engage that includes a billing country address value.</description>
        <inlineHelpText>The inbound Lead field for a transaction from Soapbox Engage that includes a billing country address value.</inlineHelpText>
        <label>Billing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbx_BillingEmail__c</fullName>
        <description>The inbound Lead field for a transaction from Soapbox Engage that includes a billing email value.</description>
        <inlineHelpText>The inbound Lead field for a transaction from Soapbox Engage that includes a billing email value.</inlineHelpText>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>sbx_BillingFirstName__c</fullName>
        <description>The inbound Lead field for a transaction from Soapbox Engage that includes a billing first name value.</description>
        <inlineHelpText>The inbound Lead field for a transaction from Soapbox Engage that includes a billing first name value.</inlineHelpText>
        <label>Billing First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbx_BillingLastName__c</fullName>
        <description>The inbound Lead field for a transaction from Soapbox Engage that includes a billing last name value.</description>
        <inlineHelpText>The inbound Lead field for a transaction from Soapbox Engage that includes a billing last name value.</inlineHelpText>
        <label>Billing Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbx_BillingNote__c</fullName>
        <description>The inbound Lead field for a transaction from Soapbox Engage that includes a billing note value.</description>
        <inlineHelpText>The inbound Lead field for a transaction from Soapbox Engage that includes a billing note value.</inlineHelpText>
        <label>Billing Note</label>
        <length>3900</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sbx_BillingPhone__c</fullName>
        <description>The inbound Lead field for a transaction from Soapbox Engage that includes a billing phone value.</description>
        <inlineHelpText>The inbound Lead field for a transaction from Soapbox Engage that includes a billing phone value.</inlineHelpText>
        <label>Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>sbx_BillingPostalCode__c</fullName>
        <description>The inbound Lead field for a transaction from Soapbox Engage that includes a billing address postal code value.</description>
        <inlineHelpText>The inbound Lead field for a transaction from Soapbox Engage that includes a billing address postal code value.</inlineHelpText>
        <label>Billing Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>